# OpenCVdetector

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  answer_key.txt  build.sh
.github/: copilot-instructions.md
include/: AnswerComparator.h  AnswerKey.h  BubbleDetector.h  CameraManager.h  FileWriter.h  HandwritingDetector.h  ImageEnhancer.h  OCRProcessor.h  PerspectiveCorrector.h  ResultDisplayer.h  ScoreCalculator.h  SheetStructureAnalyzer.h
src/: auto_text_detector.cpp  handwriting_reader.cpp  image_preview.cpp  live_reader.cpp  main.cpp  manual_crop.cpp  ocr_test.cpp  silent_crop.cpp  simple_line_detector.cpp
src/camera/: CameraManager.cpp
src/detection/: BubbleDetector.cpp  HandwritingDetector.cpp  SheetStructureAnalyzer.cpp
src/grading/: AnswerComparator.cpp  AnswerKey.cpp  ScoreCalculator.cpp
src/ocr/: OCRProcessor.cpp
src/output/: FileWriter.cpp  ResultDisplayer.cpp
src/preprocessing/: ImageEnhancer.cpp  PerspectiveCorrector.cpp
